--- a/CodeMetrics.html
+++ b/CodeMetrics.html
@@ -60,50 +60,65 @@ td[class=emptyborder] { border: 0px solid #777777; padding: 3px 0px 3px 0px; }
 		<b class="rounded_page"><b class="rounded_page5"></b><b class="rounded_page4"></b><b class="rounded_page3"></b><b class="rounded_page2"><b></b></b><b class="rounded_page1"><b></b></b></b>
 	</div>
 	<div class="majorsection-contents">
-		<p>This document contains the results of running metrics for codepro.metrics at 10/18/14 4:03 PM.</p></div>
+		<p>This document contains the results of running metrics for codepro.metrics at 10/26/14 3:05 PM.</p></div>
 
 	<ul>
 		<li>
-			<a href="#scope3">TempCodeProProject1</a>
+			<a href="#scope5">TempCodeProProject1</a>
 		</li>
 		<li>
-			<a href="#scope4">application</a>
+			<a href="#scope6">application</a>
 		</li>
 		<li>
-			<a href="#scope5">application.Actions</a>
+			<a href="#scope7">application.Actions</a>
 		</li>
 		<li>
-			<a href="#scope6">application.Constants</a>
+			<a href="#scope8">application.Constants</a>
 		</li>
 		<li>
-			<a href="#scope7">application.GUIfeatures</a>
+			<a href="#scope9">application.Errors</a>
 		</li>
 		<li>
-			<a href="#scope8">application.slogonode</a>
+			<a href="#scope10">application.GUIfeatures</a>
 		</li>
 		<li>
-			<a href="#scope9">application.slogonode.BooleanOperations</a>
+			<a href="#scope11">application.slogonode</a>
 		</li>
 		<li>
-			<a href="#scope10">application.slogonode.ControlStructures</a>
+			<a href="#scope12">application.slogonode.BooleanOperations</a>
 		</li>
 		<li>
-			<a href="#scope11">application.slogonode.MathOperations</a>
+			<a href="#scope13">application.slogonode.ControlStructures</a>
 		</li>
 		<li>
-			<a href="#scope12">application.slogonode.Number</a>
+			<a href="#scope14">application.slogonode.DisplayCommands</a>
 		</li>
 		<li>
-			<a href="#scope13">application.slogonode.TurtleCommands</a>
+			<a href="#scope15">application.slogonode.InteractionCommands</a>
 		</li>
 		<li>
-			<a href="#scope14">application.slogonode.TurtleQueries</a>
+			<a href="#scope16">application.slogonode.MathOperations</a>
 		</li>
 		<li>
-			<a href="#scope15">application.slogonode.Variables</a>
+			<a href="#scope17">application.slogonode.MultipleTurtleCommands</a>
 		</li>
 		<li>
-			<a href="#scope16">test</a>
+			<a href="#scope18">application.slogonode.Number</a>
+		</li>
+		<li>
+			<a href="#scope19">application.slogonode.PunctuationNode</a>
+		</li>
+		<li>
+			<a href="#scope20">application.slogonode.TurtleCommands</a>
+		</li>
+		<li>
+			<a href="#scope21">application.slogonode.TurtleQueries</a>
+		</li>
+		<li>
+			<a href="#scope22">application.slogonode.Variables</a>
+		</li>
+		<li>
+			<a href="#scope23">test</a>
 		</li>
 	</ul>
 	&nbsp;
@@ -123,87 +138,87 @@ td[class=emptyborder] { border: 0px solid #777777; padding: 3px 0px 3px 0px; }
 				</tr>
 				<tr>
 					<td align="left">Abstractness</td>
-					<td align="right">16.3%</td>
+					<td align="right">13.8%</td>
 				</tr>
 				<tr>
 					<td align="left">Average Block Depth</td>
-					<td align="right">0.89</td>
+					<td align="right">0.91</td>
 				</tr>
 				<tr>
 					<td align="left">Average Cyclomatic Complexity</td>
-					<td align="right">1.34</td>
+					<td align="right">1.22</td>
 				</tr>
 				<tr>
 					<td align="left">Average Lines Of Code Per Method</td>
-					<td align="right">5.54</td>
+					<td align="right">6.03</td>
 				</tr>
 				<tr>
 					<td align="left">Average Number of Constructors Per Type</td>
-					<td align="right">0.83</td>
+					<td align="right">0.88</td>
 				</tr>
 				<tr>
 					<td align="left">Average Number of Fields Per Type</td>
-					<td align="right">0.65</td>
+					<td align="right">0.61</td>
 				</tr>
 				<tr>
 					<td align="left">Average Number of Methods Per Type</td>
-					<td align="right">1.62</td>
+					<td align="right">1.59</td>
 				</tr>
 				<tr>
 					<td align="left">Average Number of Parameters</td>
-					<td align="right">0.50</td>
+					<td align="right">0.42</td>
 				</tr>
 				<tr>
 					<td align="left">Comments Ratio</td>
-					<td align="right">10.5%</td>
+					<td align="right">9.1%</td>
 				</tr>
 				<tr>
 					<td align="left">Efferent Couplings</td>
-					<td align="right">52</td>
+					<td align="right">140</td>
 				</tr>
 				<tr>
 					<td align="left">Lines of Code</td>
-					<td align="right">1,189</td>
+					<td align="right">3,350</td>
 				</tr>
 				<tr>
 					<td align="left">Number of Characters</td>
-					<td align="right">52,189</td>
+					<td align="right">136,003</td>
 				</tr>
 				<tr>
 					<td align="left">Number of Comments</td>
-					<td align="right">125</td>
+					<td align="right">308</td>
 				</tr>
 				<tr>
 					<td align="left">Number of Constructors</td>
-					<td align="right">51</td>
+					<td align="right">134</td>
 				</tr>
 				<tr>
 					<td align="left">Number of Fields</td>
-					<td align="right">47</td>
+					<td align="right">158</td>
 				</tr>
 				<tr>
 					<td align="left">Number of Lines</td>
-					<td align="right">2,064</td>
+					<td align="right">5,285</td>
 				</tr>
 				<tr>
 					<td align="left">Number of Methods</td>
-					<td align="right">99</td>
+					<td align="right">242</td>
 				</tr>
 				<tr>
 					<td align="left">Number of Packages</td>
-					<td align="right">15</td>
+					<td align="right">20</td>
 				</tr>
 				<tr>
 					<td align="left">Number of Semicolons</td>
-					<td align="right">626</td>
+					<td align="right">1,913</td>
 				</tr>
 				<tr>
 					<td align="left">Number of Types</td>
-					<td align="right">61</td>
+					<td align="right">152</td>
 				</tr>
 				<tr>
 					<td align="left">Weighted Methods</td>
-					<td align="right">201</td>
+					<td align="right">459</td>
 				</tr>
 		</table>
 	</div>
@@ -211,7 +226,7 @@ td[class=emptyborder] { border: 0px solid #777777; padding: 3px 0px 3px 0px; }
 		<b class="rounded_page"><b class="rounded_page1"><b></b></b><b class="rounded_page2"><b></b></b><b class="rounded_page3"></b><b class="rounded_page4"></b><b class="rounded_page5"></b></b>
 		<div class="rounded_pagefg">
 			<table width="100%" border="0" cellspacing="0" cellpadding="0" ><tr><td valign="middle">
-			<span class="page-footer">Generated at 10/18/14 4:03 PM</span>
+			<span class="page-footer">Generated at 10/26/14 3:05 PM</span>
 			</td><td align="right" valign="middle">
 			<span class="page-footer-details">Powered by <span title="0.0.0, UNKNOWN">CodePro Server</span></span></td></tr></table>
 		</div>
